login w/ spotify working, pulling user info

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "poseidon",
+  "name": "findify",
   "version": "0.0.1",
-  "homepage": "https://github.com/coding-house-apr2015/poseidon",
+  "homepage": "https://github.com/coding-house-apr2015/findify",
   "author": "Chyld Medford <chyld.medford@gmail.com>",
   "license": "BSD",
   "devDependencies": {
