--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "poseidon",
+  "name": "findify",
   "version": "0.0.1",
-  "homepage": "https://github.com/coding-house-apr2015/poseidon",
+  "homepage": "https://github.com/coding-house-apr2015/findify",
   "authors": [
     "Chyld Medford <chyld.medford@gmail.com>"
   ],
@@ -15,6 +15,9 @@
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.4",
     "angular-ui-router": "~0.2.15",
-    "sweetalert": "~1.0.1"
+    "sweetalert": "~1.0.1",
+    "satellizer": "~0.10.1",
+    "materialize": "~0.96.1",
+    "angular-spotify": "~0.14.0"
   }
 }
